--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="Imagens/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Imagens/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Imagens/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Portifólio</title>
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="/Imagens/bg.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>FullStack Developer & Front End Designer</h1>
+                <p>Pedro H Roque</p>
+                <button>SAIBA MAIS</button>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
