--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <header>
             <div class="img-wrapper">
-                <img src="/Imagens/bg.jpg" alt="">
+                <img src="./Imagens/bg.jpg" alt="">
             </div>
             <div class="banner">
                 <h1>FullStack Developer & Front End Designer</h1>
