--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>SAIBA MAIS</button>
             </div>
         </header>
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="" class="menu-link">Home</a></li>
@@ -46,7 +46,93 @@
                 <a href=""><i class="fa-brands fa-github"></i></a>
                 <a href=""><i class="fa-brands fa-twitter"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HMTL</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero reiciendis sapiente dolorem
+                            illum dolores dolor, fugit deserunt ratione consequuntur velit, sequi maxime ea doloremque
+                            iure modi, perferendis veniam dicta autem!</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="./Imagens/conhecimentos.jpg" alt="">
+                </div>
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
