--- a/index.html
+++ b/index.html
@@ -133,6 +133,55 @@
                     <img src="./Imagens/conhecimentos.jpg" alt="">
                 </div>
         </section>
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./Imagens/proj1.jpg" alt="imagem do projeto ToDo">
+                    </div>
+
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sit quibusdam numquam
+                            architecto. Nulla molestias ipsam aliquid! Rem a quas harum atque. Totam inventore impedit
+                            modi delectus perferendis. Libero, accusantium?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./Imagens/proj2.jpg" alt="imagem do projeto maratona">
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, molestias officiis dolores
+                            nulla magnam ratione debitis deleniti doloremque sint assumenda harum fuga atque quidem
+                            exercitationem quos ipsam dolor. Voluptatum, accusantium.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">    
+                    <div class="card-img-wrapper">
+                        <img src="./Imagens/proj3.jpg" alt="imagem do projeto Think About">
+                    </div>
+                    <div class="card-info">
+                        <h2>Think About</h2>
+                        <h3>HTML, CSS, Javascript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum maxime eveniet
+                            quasi. Repellendus veritatis expedita neque saepe tenetur distinctio consectetur nobis
+                            inventore, illo id beatae, nisi, veniam magni ab!</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
