--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <h3>HTML, CSS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, molestias officiis dolores
                             nulla magnam ratione debitis deleniti doloremque sint assumenda harum fuga atque quidem
-                            exercitationem quos ipsam dolor. Voluptatum, accusantium.</p>
+                            exercitationem quos ipsam dolor.</p>
                         <button>Saiba Mais</button>
                     </div>
                 </div>
