--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sit quibusdam numquam
                             architecto. Nulla molestias ipsam aliquid! Rem a quas harum atque. Totam inventore impedit
                             modi delectus perferendis. Libero, accusantium?</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
                 <div class="card">
@@ -163,7 +163,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, molestias officiis dolores
                             nulla magnam ratione debitis deleniti doloremque sint assumenda harum fuga atque quidem
                             exercitationem quos ipsam dolor.</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
                 <div class="card">    
@@ -176,11 +176,35 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum maxime eveniet
                             quasi. Repellendus veritatis expedita neque saepe tenetur distinctio consectetur nobis
                             inventore, illo id beatae, nisi, veniam magni ab!</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
             </div>
 
+        </section>
+        <section class="sessao-contato">
+            <div class="contato-wrapper">
+                <div class="contato-left"></div>
+                <div class="contato-right">
+                    <h1 class="">Contato</h1>
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="field" id="nome">
+                            <label for="nome"class="field-label">Nome</label>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" class="field" id="email">
+                            <label for="email" class="field-label">E-mail</label>
+                        </div>
+                        <div class="input-group">
+                            <textarea class="field" id="mensagem"></textarea>
+                            <label for="mensagems" class="field-label">Mensagem</label>
+                        </div>
+                        <button type="submit" class="btn btn-submit">Enviar</button>
+
+                    </form>
+                </div>
+            </div>
         </section>
     </div>
 </body>
