--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">Conhecimento</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
                 </ul>
             </nav>
             <div class="social-media">
@@ -48,11 +48,11 @@
             </div>
         </aside>
 
-        <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos" id="conhecimentos">
             <div class="sessao-header">
                 <h1>Conhecimentos</h1>
             </div>
-            <div class="conhecimentos">
+            <div class="conhecimentos" >
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <i class="fab fa-html5"></i>
@@ -134,11 +134,11 @@
                 </div>
         </section>
 
-        <section class="sessao-projetos">
+        <section class="sessao-projetos" id="projetos">
             <div class="sessao-header">
                 <h1>Projetos</h1>
             </div>
-            <div class="projetos">
+            <div class="projetos" >
                 <div class="card">
                     <div class="card-img-wrapper">
                         <img src="./Imagens/proj1.jpg" alt="imagem do projeto ToDo">
