--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </ul>
             </nav>
             <div class="social-media">
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/pedro-henrique-roque-da-silva-009a48102/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/p3dr0k1rk"><i class="fa-brands fa-github"></i></a>
                 <a href=""><i class="fa-brands fa-twitter"></i></a>
             </div>
         </aside>
@@ -240,8 +240,8 @@
               </p>
               <div class="social-list">
                 <ul>
-                  <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/pedro-henrique-roque-da-silva-009a48102/"><i class="fab fa-linkedin"></i></a></li>
+                  <li><a href="https://github.com/p3dr0k1rk"><i class="fab fa-github"></i></a></li>
                   <li><a href=""><i class="fab fa-twitter"></i></a></li>
                 </ul>
               </div>
