--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Imagens/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Imagens/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="./Imagens/site.webmanifest">
     <title>Portifólio</title>
 </head>
 
